# resana-secure

./: .buildpacks  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  OUTSCALE_CHEATSHEET.md  Procfile  README.md  api.md  dev-requirements.txt  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  setup.py  test_save_file.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  ci.yml  codeql.yml
antivirus_connector/: __init__.py  antivirus.py  app.py  cli.py  config.py  pyproject.toml  routes.py  utils.py
antivirus_connector/antivirus_connector/: cli.py
client/: README.md  api.md  mypy.ini  pyproject.toml  setup.cfg
client/client_tests/: conftest.py  test_api_files.py  test_api_humans.py  test_api_invitations.py  test_api_invite.py  test_api_organization.py  test_api_recovery.py  test_api_shamir_recovery.py  test_api_shamir_recovery_invite.py  test_api_shared_recovery.py  test_api_workspaces.py  test_auth.py  test_cores_manager.py  test_crypto.py
client/client_tests/tests/: test_api_humans.py  test_api_invite.py  test_api_organization.py  test_api_recovery.py
client/resana_secure/: __init__.py  _version.py  app.py  cli.py  config.py  converters.py  cores_manager.py  crypto.py  gui.py  invites_manager.py  ltcm.py  tgb.py  utils.py
client/resana_secure/routes/: auth.py  files.py  humans.py  invitations.py  invite.py  organization.py  recovery.py  workspaces.py
client/submodules/tgbverifier/: .gitignore  pyproject.toml  setup.py
client/submodules/tgbverifier/src/: tgbverifiermodule.c
client/tests/: conftest.py  test_api_files.py  test_api_humans.py  test_api_invitations.py  test_api_invite.py  test_api_organization.py  test_api_recovery.py  test_api_workspaces.py  test_auth.py
client/windows-icon-handler/check-icon-handler/: CheckIconHandler.rgs  checkiconhandler.idl  dllmain.h
client/windows-icon-handler/refresh-icon-handler/: RefreshIconHandler.rgs  dllmain.h  refreshiconhandler.idl
misc/: InfoScript.sh  export_packages_version.py  webhook_on_logs.py
misc/test_book/: auth.js  bootstrap.js  common.js  index.html  release.js  test_book.css  test_book.js
packaging/: patch_parsec_version.py  test_routes.py
packaging/pyinstaller/: launch_script.py  resana_secure.spec
packaging/snap/: README.md  build.sh
packaging/snap/snap/: snapcraft.yaml
packaging/win32/: README.md  freeze_program.py  installer.nsi  launch_script.py  make_installer.py  program-bootstrap.c  pyinstaller.spec  resana_secure.spec
packaging/windows/: README.md  freeze_program.py  installer.nsi  installer_with_conformity.nsi  launch_script.py  launch_script_with_conformity.py  launch_script_without_conformity.py  make_installer.py  pyinstaller.spec
resana_secure/: README.md  __main__.py  _version.py  app.py  claimers_manager.py  cli.py  cores_manager.py  gui.py  invites_manager.py  ltcm.py  pyproject.toml  utils.py
resana_secure/resana_secure/: cores_manager.py  gui.py
resana_secure/resana_secure/routes/: auth.py  organization.py  recovery.py
resana_secure/routes/: auth.py  files.py  humans.py  invitations.py  invite.py  organization.py  recovery.py  workspaces.py
server/: asgi_ip_filtering.py  asgi_ip_filtering_by_organization.py  pyproject.toml  resana_backend_run.py  resana_server_entrypoint.py  run.py
server/antivirus_connector/: antivirus.py  app.py  cli.py  config.py  routes.py
server/server_tests/: test_antivirus_connector.py  test_asgi_ip_filtering.py  test_asgi_ip_filtering_by_organization.py
server/tests/: test_antivirus_connector.py
subtree/parsec-cloud/: setup.py
subtree/parsec-cloud/parsec/: _version.py
subtree/parsec-cloud/parsec/api/: transport.py
subtree/parsec-cloud/parsec/backend/: app.py  events.py
subtree/parsec-cloud/parsec/core/: logged_core.py
subtree/parsec-cloud/parsec/core/backend_connection/: exceptions.py  transport.py
subtree/parsec-cloud/parsec/core/cli/: bootstrap_organization.py
subtree/parsec-cloud/parsec/core/gui/: users_widget.py
subtree/parsec-cloud/requirement/: core_requirement.txt  install_requirement.txt
tests/: conftest.py  test_antivirus_connector.py  test_api_files.py  test_api_folders.py  test_api_invitations.py  test_api_invite.py  test_api_organization.py  test_api_recovery.py  test_api_workspaces.py  test_auth.py
