[tool.poetry]
name = "resana_repository"
version = "0.10.0"
description = ""
authors = ["Scille SAS"]
packages = [
    { include = "./resana_secure/resana_secure" },
    { include = "./antivirus_connector/antivirus_connector" },
]

[tool.poetry.dependencies]

# Base requirements

python = "~3.9.0"
quart = "^0.17.0"
quart-trio = "^0.9.1"
quart-cors = "^0.5"
hypercorn = "^0.13.2"
parsec-cloud = {extras = ["backend", "core"], version = "^2.12.1" }

# Resana secure requirements

# Antivirus connector requirements
httpx = { version="0.16.0", optional=true }


[tool.poetry.extras]
resana_secure = [
]

antivirus_connector = [
    "httpx"
]

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.6.0"
pytest-trio = "^0.7"
pyinstaller = "~=5.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
