[tool.poetry]
name = "resana_secure"
version = "0.12.2"
description = ""
authors = ["Scille SAS"]

[tool.poetry.dependencies]
python = "~3.9.10"
quart = "^0.18.1"
quart-trio = "^0.10.0"
quart-cors = "^0.5"
hypercorn = "^0.13.2"

# Install parsec from the submodule
parsec-cloud = { path = "./submodules/parsec-cloud", extras = ["backend", "core"], develop = false }
cryptography = "^41.0.0"
quart-rate-limiter = "^0.7.0"
oscrypto = "^1.3.0"
pyqt5 = "^5.15.9"
pyqt5-sip = "12.11.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.6.0"
pytest-trio = "^0.8"
pytest-xdist = "^3.2.1"
httpx = "0.24.1"
PyQt5_stubs = "^5.15"
mypy = "^0.991"

[tool.poetry.group.packaging]
optional = true

[tool.poetry.group.packaging.dependencies]
pyinstaller = "~=5.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
