[tool.poetry]
name = "resana_secure"
version = "0.11.0"
description = ""
authors = ["Scille SAS"]

[tool.poetry.dependencies]
python = "~3.9.0"
quart = "^0.17.0"
quart-trio = "^0.9.1"
quart-cors = "^0.5"
hypercorn = "^0.13.2"

parsec-cloud = { version = "^2.13.0rc2", extras = ["core"] }

[tool.poetry.dev-dependencies]
pyinstaller = "~=5.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
