[tool.poetry]
name = "resana_server"
version = "0.15.0"
description = ""
authors = ["Scille SAS"]
packages = [
    { include = "antivirus_connector" },
    { include = "asgi_ip_filtering.py" },
    { include = "resana_backend_run.py" },
    { include = "resana_server_entrypoint.py" }
]

[tool.poetry.scripts]
resana_server = 'resana_server_entrypoint:main'

[tool.poetry.dependencies]
python = "~3.9.10"
quart = "^0.18.1"
quart-trio = "^0.10.0"
quart-cors = "^0.5"
hypercorn = "^0.13.2"
httpx = "0.24.1"
oscrypto = "1.3.0"

# Forcing 2.2.3 because there seems to be an issue in 2.3.6
# See https://github.com/Scille/resana-secure/issues/200#issuecomment-1614692826
werkzeug = "2.2.3"

# install parsec from pypi for linux, or from git for windows & macos
parsec-cloud = { version = "^2.16.0-rc.5", extras = ["backend"] }

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.9.1"
pytest-trio = "^0.8"
pytest-xdist = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
